<resources>
    <string name="app_name">Карманный Жириновский</string>
    <string name="headlineText">Карманный Жириновский</string>
    <string name="jetoRussia">Это Россия!</string>
    <string name="shizoid">Шизоид</string>
    <string name="molchat">Молчать!</string>
    <string name="yaVedu">Я веду себя так, как я считаю нужным</string>
    <string name="rasstreliaj">Расстреляй его там в коридоре!</string>
    <string name="yaOtvechayu">Я отвечаю здесь!</string>
    <string name="smekh">*Смех*</string>
    <string name="khvatitJetoTerpet">Хватит это терпеть!</string>
    <string name="aCheUNego">А чё у него всё так хорошо?</string>
    <string name="jetoLdpr">Это ЛДПР!</string>
    <string name="khvatitKormit">Хватит кормить Кавказ</string>
    <string name="iNiktoNePomozhet">И никто вам не поможет</string>
    <string name="ktoTiTakoy">Кто ты такой вообще?</string>
    <string name="myVanKhrebetPerelomim">Мы вам хребет переломим</string>
    <string name="podlostGadost">Подлость, гадость, преступники!</string>
    <string name="luchshePomolchite">Поэтому лучше помолчите</string>
    <string name="prostoyVopros">Простой вопрос</string>
    <string name="puskayKommunistiOtvechayut">Пускай за это коммунисты ответят</string>
    <string name="slushayte">Слушайте, что я вам говорю</string>
    <string name="sovestEstUVas">Совесть есть у вас?</string>
    <string name="sumasshedshiy">Сумасшедший больной человек</string>
    <string name="tyPochemu">Ты почему не любишь женщин?</string>
    <string name="vasVsekh">Вас всех под суд</string>
    <string name="votTak">Вот так нас посылают</string>
    <string name="vsemDetyam">Всем детям России 5 ягодок</string>
    <string name="vyChtoSUmaSoshli">Вы что, с ума сошли все?</string>
    <string name="vyOskorblyaete">Вы оскорбляете весь народ</string>
    <string name="vySouchastniki">Вы соучастники</string>
    <string name="vyVseBessovestniye">Вы все бессовестные</string>
    <string name="vyyditeVon">Выйдите вон отсюда</string>
    <string name="yaGovoruZamolchite">Замолчите</string>
    <string name="yaProtiv">Я против</string>
    <string name="yaTakoyKakoyYest">Я такой, какой есть</string>
    <string name="yaVykinu">Я выкину вас из Москвы</string>
    <string name="yaZanyat">Я занят</string>
    <string name="zaMenya">За меня</string>
    <string name="zvonok">Звонок</string>
</resources>